stylesheets/application.css
/* ... */
#quick-search #q {
  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2226%22%20height%3D%2226%22%20viewBox%3D%220%200%2024%2024%22%20style%3D%22fill%3A%20%2344546f%3B%22%3E%3Cpath%20d%3D%22M10%2018a7.952%207.952%200%200%200%204.897-1.688l4.396%204.396%201.414-1.414-4.396-4.396A7.952%207.952%200%200%200%2018%2010c0-4.411-3.589-8-8-8s-8%203.589-8%208%203.589%208%208%208zm0-14c3.309%200%206%202.691%206%206s-2.691%206-6%206-6-2.691-6-6%202.691-6%206-6z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
  background-repeat: no-repeat;
  background-position-x: 2px;
  background-position-y: 50%;
}

#quick-search #q:focus, #projects-quick-search:focus{
  border: 2px solid #1D7AFC;
  color: #000;
}

#notification div.count{
  background-color: #c9372c;
  position: absolute;
  padding: 2px;
  left: 15px;
  border-radius: 10px;
  width: 15px;
  height: 15px;
  top: -3px;
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bold;
}

#notification .notify-img {
  margin-right: 5px
}

#project-jump.drdn, #project-jump .drdn-trigger{
  width: max-content;
  height: max-content;
  line-height: unset;
}

#project-jump .drdn-trigger{
  display: flex;
  align-items: center;
  justify-content: center;
}

div#clockINOUT, div#issueLog, div#notification, div#project-jump{
  padding: 3px;
  margin: 0px !important;
}

#clockINOUT:hover, #issueLog:hover, #notification:hover, #project-jump:hover,
#userprofile:hover {
  background-color: #E9EAEC;
  border-radius: 25px;
}

#quick-search #q:hover, #quick-search label:hover{
  background-color: #E9EAEC;
}

#header{
  min-height: unset;
  position: unset;
  padding-top: 0px;
  padding-bottom: 0px;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

#header h1{
  margin: 0px;
  line-height: normal;
  font-weight: bold;
  font-size: 2em;
}

#main-menu{
  bottom: unset;
  left: unset;
  margin: 0px;
  padding: 0px;
}

#left-nav{
  position: fixed;
  top: 57px;
  height: 100%;
  width: 240px;
  border-right: 2px solid #e2e4ea;
  background: #FFFFFF;
  overflow: auto;
  z-index: 100;
}

#main-menu ul{
  display: flex;
  flex-direction: column;
}

#main-menu ul a{
  color: #6B778C;
  font-weight: 500;
  line-height: 2;
}

#main{
  position: relative;
  top: 60px;
  margin-bottom: 60px;
}

#main.sidebar{
  position: relative;
  left: 242px;
  width: calc(100% - 242px);
}

#main-menu li a.selected {
  color: #0c66e4;
  font-weight: 600;
  background-color: #e9f2ff;
}
#main-menu li a{
  width: 100%;
}

#main-menu li.highlighted{
  background-color: #e9f2ff;
}

#sidebar{
  background-color: #FFFFFF;
  width: 100%;
  padding-left: 0px;
  margin: 0px;
  line-height: 2;
  padding-bottom: 50px;
}

.border-top{
  border-top: 2px solid #e2e4ea;
}

#sidebar a.selected {
  line-height: 2;
  padding: 0px;
  margin: 0px;
  padding: 4px 10px 4px 10px;
  background-color: #e9f2ff;
}

#sidebar h3{
  padding: 4px 10px 4px 10px;
}

#main-menu li a.new-object {
  background-color: inherit;
}

#main-menu .menu-children li a{
  color: #6B778C;
}

#main-menu li a.selected:hover {
  color: #0c66e4 !important;
  background-color: #e9f2ff;
}

#main-menu li a:hover {
  background-color: #e9f2ff;
}

#main-menu li:hover {
  background-color: #e9f2ff;
}

.toggle-icon{
  position: fixed;
  top: 90px;
  left: 225px;
  width: 25px;
  height: 25px;
  z-index: 100;
  border-radius: 50%;
  background-color: #0c66e4;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  fill: #FFFFFF
}

.toggle-icon:hover{
  background-color: #006aff;
  border: none;
  fill: #FFFFFF
}

#left-nav.sidenav-left{
  width: 20px;
}

.toggle-icon.left{
  left: 10px;
}

#left-nav.hover{
  width: 240px;
}

.toggle-icon.hover{
  left: 230px;
}

#main.left{
  width: calc(100% - 22px);
  left: 22px;
}

.menu-icon{
  width: 25px;
  height: 25px;
}

#main-menu li {
  display: flex;
  align-items: center;
  justify-content: left;
  padding: 5px 0px 5px 20px;
}

#main-menu li.highlighted::before {
  width: 4px;
  position: relative;
  background: var(--ds-text-selected, #0052CC);
  border-radius: 0 var(--ds-border-radius, 4px) var(--ds-border-radius, 4px) 0;
  content: "";
  /* inset-block-end: var(--ds-space-150, 18px);
  inset-block-start: var(--ds-space-150, 18px); */
  inset-inline-start: 0px;
  height: 15px;
  left: -15px;
}

#main-menu .menu-children {
  top: 0px;
  box-shadow: 0px 0px 40px rgba(0,0,0,.4);
  border: 1px solid #e2e4ea;
  border-radius: 5px;
}

#main-menu .menu-children li{
  background-color: inherit;
}

#main-menu .menu-children li a{
  background-color: inherit;
  width: inherit;
}

#main-menu .menu-children li a:hover {
  background-color: unset;
}

#main-menu .menu-children li:hover {
  background-color: #e9f2ff;
}

#sidebar p,#sidebar ul, #sidebar h3, #sidebar h4, #sidebar div{
  padding-left: 10px;
}

#admin-menu{
  padding-left: 0px !important;
  font-size: 14px;
}

#admin-menu ul{
  padding-left: 0px;
}

#admin-menu ul li{
  padding-left: 10px;
}

#admin-menu a{
  background: unset !important;
  padding-left: 10px;
}

#admin-menu li {
  display: flex;
  align-items: center;
}

#admin-menu li a.selected {
  padding-left: 10px !important;
}

.box {
  background-color: #FFF;
}

.redmine-logo {
  width: 50px;
  height: 36px;
  text-align: center;
  float: left;
}

.redmine-logo svg{
  width: 26px;
  height: 26px;
  background-image: url('../images/logo.png');
  background-repeat: no-repeat;
  background-size: 26px;
  margin: 5px 12px 5px 12px;
}

.redmine-logo a#redmine-home:hover{
  background-color: unset;
}

#appendlabel {
  padding: 0px !important;
  font-size: inherit !important;
}

#clockINOUT {
  align-items: center;
  justify-content: center;
}

h1, h2, h3, h4, h5, h6 {
  font-family: Roboto, 'Fira Sans', Oxygen, 'Open Sans', Ubuntu, sans-serif !important;
}

#content h1, h2, h3, h4, h5, h6 {
  color: #172b4d;
}
/* ... */

